# getting_started_OpenGL

./: CMakeLists.txt  README.md
Application/: CMakeLists.txt  main.cpp
ECHO/: CMakeLists.txt
ECHO/dependences/glad/: CMakeLists.txt
ECHO/dependences/glad/include/glad/: glad.h
ECHO/dependences/glad/src/: glad.c
